# VapourBox

./: .gitignore  CLAUDE.md  README.md  aus_tape_1(20260107-0113)-proj.llc  tmpclaude-f97e-cwd
.claude/: settings.local.json
.github/workflows/: build-macos.yml  build-windows.yml
Scripts/: build-app-bundle.sh  build-dependencies.sh  build-standalone-app.sh  check-deps-changed.sh  codesign-dependencies.sh  download-deps-macos.sh  download-deps-windows.ps1  get-github-version.sh  macos-plugin-patches.md  package-deps-macos.sh  package-deps-windows.ps1  package-macos.sh  package-windows.ps1  release.sh  setup-test-bundle.sh  test-deinterlace.sh  update-version.sh
Shared/: QTGMCParameters.swift
Tests/iDeinterlaceTests/: DeinterlaceIntegrationTests.swift  QTGMCParametersTests.swift
app/: README.md  pubspec.yaml  tmpclaude-6f6a-cwd
app/assets/: deps-version.json
app/integration_test/: filter_pipeline_test.dart
app/lib/: main.dart
app/macos/: Podfile
app/test/: dynamic_parameters_test.dart  filter_schema_test.dart  parameter_converter_test.dart  (+2 more)
docs/: FILTER_SCHEMA.md
iDeinterlaceWorker/: PipelineExecutor.swift  ProgressReporter.swift  ScriptGenerator.swift  WorkerApp.swift  main.swift
legacy/: Package.swift
licenses/: NOTICES.txt
worker/: Cargo.toml  test_worker.ps1  tmpclaude-7e75-cwd
worker/filters/: manifest.json
worker/filters/core/: crop_resize.json  dehalo.json
worker/src/: dependency_locator.rs  filter_registry.rs  filter_schema.rs  lib.rs  main.rs  pipeline_executor.rs  progress_reporter.rs  schema_script_generator.rs  script_generator.rs
worker/src/models/: chroma_fix_parameters.rs  color_correction_parameters.rs  crop_resize_parameters.rs  deband_parameters.rs  deblock_parameters.rs  dehalo_parameters.rs  mod.rs  noise_reduction_parameters.rs  progress_info.rs  qtgmc_parameters.rs  restoration_pipeline.rs  sharpen_parameters.rs  video_job.rs
worker/src/platform/: macos.rs  mod.rs  windows.rs
worker/templates/: pipeline_template.vpy  preview_template.vpy  qtgmc_template.vpy
worker/tests/: filter_integration_test.rs
(+93 files in other folders)
