[package]
name = "ideinterlace-worker"
version = "1.0.0"
edition = "2021"
description = "Video deinterlacing worker using QTGMC via VapourSynth"
authors = ["iDeinterlace Contributors"]
license = "MIT"

[lib]
name = "ideinterlace_worker"
path = "src/lib.rs"

[[bin]]
name = "ideinterlace-worker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
which = "7.0"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console"
]}

[profile.release]
opt-level = 3
lto = true
strip = true
