[package]
name = "vapourbox-worker"
version = "0.3.0"
edition = "2021"
description = "Video restoration worker using VapourSynth"
authors = ["Stuart Cameron"]
license = "GPL-3.0"

[lib]
name = "vapourbox_worker"
path = "src/lib.rs"

[[bin]]
name = "vapourbox-worker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
which = "7.0"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console"
]}

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
